tests/lang/oberon/types/pass/nested-arrays.obr
MODULE Arrays;
    TYPE X = ARRAY 5, 6, 7 OF INTEGER;
END Arrays.
