tests/lang/oberon/types/fail/array-length-too-big.obr
MODULE Arrays;
    TYPE X = ARRAY 99999999999999999999999999 OF INTEGER;
END Arrays.
